<resources>

    <!-- Globals -->
    <string name="app_name">Wifi RC Car ESP8266</string>
    <string name="short_app_name">Wifi ESP8266</string>

    <string name="activity_button">Button</string>
    <string name="activity_accelerometer">Accelerometer</string>
    <string name="activity_voice">Voice</string>
    <string name="activity_configuration">Configuration</string>


    <!-- Icon and Images -->
    <string name="alt_controller">Controller</string>
    <string name="alt_accelerometer">Accelerometer</string>
    <string name="alt_megaphone">Megaphone</string>

    <string name="alt_arrow_up">Arrow up</string>
    <string name="alt_arrow_down">Arrow down</string>
    <string name="alt_arrow_right">Arrow right</string>
    <string name="alt_arrow_left">Arrow left</string>

    <string name="alt_information">Information</string>
    <string name="alt_wifi">Wifi</string>
    <string name="alt_configuration">Configuration</string>

    <!-- Action Button -->
    <string name="action_button_1">1</string>
    <string name="action_button_2">2</string>
    <string name="action_button_3">3</string>
    <string name="action_button_4">4</string>
    <string name="action_button_5">5</string>
    <string name="action_button_6">6</string>
    <string name="action_button_7">7</string>
    <string name="action_button_8">8</string>

    <!-- Configuration -->

    <string name="configuration_server">Server</string>
    <string name="configuration_move">Move parameters</string>
    <string name="configuration_action">Action parameters</string>

    <string name="address_ip_title">IP Address</string>
    <string name="address_ip_dialog_title">IP Address</string>
    <string name="address_ip_dialog_message">Enter the IP Address of your server</string>

    <string name="port_title">Port</string>
    <string name="port_dialog_title">Port</string>
    <string name="port_dialog_message">Enter the port of your server</string>

    <string name="move_forward_title">Move forward</string>
    <string name="move_forward_dialog_title">Move forward</string>
    <string name="move_forward_dialog_message">Enter the command to move forward</string>

    <string name="move_backward_title">Move backward</string>
    <string name="move_backward_dialog_title">Move backward</string>
    <string name="move_backward_dialog_message">Enter the command to move backward</string>

    <string name="move_stop_title">Move stop</string>
    <string name="move_stop_dialog_title">Move stop</string>
    <string name="move_stop_dialog_message">Enter the command to move stop</string>

    <string name="turn_left_title">Turn left</string>
    <string name="turn_left_dialog_title">Turn left</string>
    <string name="turn_left_dialog_message">Enter the command to turn left</string>

    <string name="turn_right_title">Turn right</string>
    <string name="turn_right_dialog_title">Turn right</string>
    <string name="turn_right_dialog_message">Enter the command to turn right</string>

    <string name="action_1_title">Action 1</string>
    <string name="action_1_dialog_title">Action 1</string>
    <string name="action_1_dialog_message">Enter the command to linked with action 1</string>

    <string name="action_2_title">Action 2</string>
    <string name="action_2_dialog_title">Action 2</string>
    <string name="action_2_dialog_message">Enter the command to linked with action 2</string>

    <string name="action_3_title">Action 3</string>
    <string name="action_3_dialog_title">Action 3</string>
    <string name="action_3_dialog_message">Enter the command to linked with action 3</string>

    <string name="action_4_title">Action 4</string>
    <string name="action_4_dialog_title">Action 4</string>
    <string name="action_4_dialog_message">Enter the command to linked with action 4</string>

    <string name="action_5_title">Action 5</string>
    <string name="action_5_dialog_title">Action 5</string>
    <string name="action_5_dialog_message">Enter the command to linked with action 5</string>

    <string name="action_6_title">Action 6</string>
    <string name="action_6_dialog_title">Action 6</string>
    <string name="action_6_dialog_message">Enter the command to linked with action 6</string>

    <string name="action_7_title">Action 7</string>
    <string name="action_7_dialog_title">Action 7</string>
    <string name="action_7_dialog_message">Enter the command to linked with action 7</string>

    <string name="action_8_title">Action 8</string>
    <string name="action_8_dialog_title">Action 8</string>
    <string name="action_8_dialog_message">Enter the command to linked with action 8</string>

    <!-- Legacy String-->
    <string name="titleToolbarSettings">Settings</string>
    <string name="settingSection_1">Server setting</string>
    <string name="settingSection_2">Commands</string>

    <string name="settingIP_title">IP Address</string>
    <string name="settingIP_summary">Enter your IP Address</string>
    <string name="settingIP_title_dialog">Your IP Address</string>
    <string name="settingIP_text_dialog">Enter your IP Address</string>

    <string name="settingPort_title">Port</string>
    <string name="settingPort_summary">Enter the port of your server</string>
    <string name="settingPort_title_dialog">The server port</string>
    <string name="settingPort_text_dialog">Enter the port of your server</string>

    <string name="settingForward_title">Moving forward</string>
    <string name="settingForward_summary">Enter the command to move forward</string>
    <string name="settingForward_title_dialog">Command to move forward</string>
    <string name="settingForward_text_dialog">Enter the command to move forward</string>

    <string name="settingBackward_title">Moving backward</string>
    <string name="settingBackward_summary">Enter the command to move backward</string>
    <string name="settingBackward_title_dialog">Command to move backward</string>
    <string name="settingBackward_text_dialog">Enter the command to move backward</string>

    <string name="settingTurnRight_title">Turn right</string>
    <string name="settingTurnRight_summary">Enter the command to turn right</string>
    <string name="settingTurnRight_title_dialog">Command to turn right</string>
    <string name="settingTurnRight_text_dialog">Enter the command to turn right</string>

    <string name="settingTurnLeft_title">Turn left</string>
    <string name="settingTurnLeft_summary">Enter the command to turn left</string>
    <string name="settingTurnLeft_title_dialog">Command to turn left</string>
    <string name="settingTurnLeft_text_dialog">Enter the command to turn left</string>

    <string name="settingStop_title">Stop</string>
    <string name="settingStop_summary">Enter the command to stop</string>
    <string name="settingStop_title_dialog">Command to stop</string>
    <string name="settingStop_text_dialog">Enter the command to stop</string>

    <string name="settingSection_3">Voice Command Keywords</string>

    <string name="settingLanguage_title">Keyword language</string>
    <string name="settingLanguage_summary">Select the language of the keywords</string>
    <string name="settingLanguage_title_dialog">Select your language</string>

    <string name="settingForwardVoice_title">Moving forward</string>
    <string name="settingForwardVoice_summary">Enter the keyword to move forward</string>
    <string name="settingForwardVoice_title_dialog">Keyword to move forward</string>
    <string name="settingForwardVoice_text_dialog">Enter the keyword to move forward</string>

    <string name="settingBackwardVoice_title">Moving backward</string>
    <string name="settingBackwardVoice_summary">Enter the keyword to move backward</string>
    <string name="settingBackwardVoice_title_dialog">Keyword to move backward</string>
    <string name="settingBackwardVoice_text_dialog">Enter the keyword to move backward</string>

    <string name="settingTurnRightVoice_title">Turn right</string>
    <string name="settingTurnRightVoice_summary">Enter the keyword to turn right</string>
    <string name="settingTurnRightVoice_title_dialog">Keyword to turn right</string>
    <string name="settingTurnRightVoice_text_dialog">Enter the keyword to turn right</string>

    <string name="settingTurnLeftVoice_title">Turn left</string>
    <string name="settingTurnLeftVoice_summary">Enter the keyword to turn left</string>
    <string name="settingTurnLeftVoice_title_dialog">Keyword to turn left</string>
    <string name="settingTurnLeftVoice_text_dialog">Enter the keyword to turn left</string>

    <string name="settingTextSourceCode">The source code of my Wifi Car is available here :\n\n https://github.com/lacour-vincent/wifi-car-esp8266 \n\n
    The default commands sent are:\n
           • http://IP:Port/?State=F\n
           • http://IP:Port/?State=B\n
           • http://IP:Port/?State=R\n
           • http://IP:Port/?State=L\n
           • http://IP:Port/?State=S\n
           • http://IP:Port/?State=ON\n
           • http://IP:Port/?State=OFFn
    </string>

    <!-- Strings related to Control Button Activity -->
    <string name="titleToolbarControlButton">Buttons</string>
    <string name="helpButtonTitle">Information</string>
    <string name="helpButtonText">Keep pressing a button to send the command.\n\nThe \"Stop\" command is sent when you release the button.</string>

    <!-- Strings related to Control Accelerometer Activity -->
    <string name="titleToolbarControlAccelerometer">Accelerometer</string>
    <string name="helpAccelerometerTitle">Information</string>
    <string name="helpAccelerometerText">Rotate your device to control the car.</string>

    <!-- Strings related to Control Voice Activity -->
    <string name="titleToolbarControlVoice">Speech Recognition</string>
    <string name="helpVoiceTitle">Information</string>
    <string name="helpVoiceText">The voice commands and the language to control the car can be modified in the setting page.\n\nThe \"Stop\" command will be sent after the chosen delay.\n\nTo use voice recognition offline, you must download the package corresponding to your language.</string>
    <string name="helpPositive">Got it!</string>
    <string name="VoicePrompt">What do you want to do?</string>

</resources>
