<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="Server"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:dialogMessage="@string/address_ip_dialog_message"
            android:dialogTitle="@string/address_ip_dialog_title"
            android:inputType="text"
            android:key="ip_address"
            android:title="@string/address_ip_title"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:dialogMessage="@string/port_dialog_message"
            android:dialogTitle="@string/port_dialog_title"
            android:inputType="text"
            android:key="port"
            android:title="@string/port_title"
            app:iconSpaceReserved="false" />

    </PreferenceCategory>


    <PreferenceCategory
        android:title="@string/configuration_move"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:dialogMessage="@string/move_forward_dialog_message"
            android:dialogTitle="@string/move_forward_dialog_title"
            android:inputType="text"
            android:key="move_forward"
            android:title="@string/move_forward_title"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:dialogMessage="@string/move_backward_dialog_message"
            android:dialogTitle="@string/move_backward_dialog_title"
            android:inputType="text"
            android:key="move_backward"
            android:title="@string/move_backward_title"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:dialogMessage="@string/turn_right_dialog_message"
            android:dialogTitle="@string/turn_right_dialog_title"
            android:inputType="text"
            android:key="turn_right"
            android:title="@string/turn_right_title"
            app:iconSpaceReserved="false" />


        <EditTextPreference
            android:dialogMessage="@string/turn_left_dialog_message"
            android:dialogTitle="@string/turn_left_dialog_title"
            android:inputType="text"
            android:key="turn_left"
            android:title="@string/turn_left_title"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:dialogMessage="@string/move_stop_dialog_message"
            android:dialogTitle="@string/move_stop_dialog_title"
            android:inputType="text"
            android:key="move_stop"
            android:title="@string/move_stop_title"
            app:iconSpaceReserved="false" />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/configuration_action"
        app:iconSpaceReserved="false">

        <EditTextPreference
            android:dialogMessage="@string/action_1_dialog_message"
            android:dialogTitle="@string/action_1_dialog_title"
            android:inputType="text"
            android:key="action_1"
            android:title="@string/action_1_title"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:dialogMessage="@string/action_2_dialog_message"
            android:dialogTitle="@string/action_2_dialog_title"
            android:inputType="text"
            android:key="action_2"
            android:title="@string/action_2_title"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:dialogMessage="@string/action_3_dialog_message"
            android:dialogTitle="@string/action_3_dialog_title"
            android:inputType="text"
            android:key="action_3"
            android:title="@string/action_3_title"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:dialogMessage="@string/action_4_dialog_message"
            android:dialogTitle="@string/action_4_dialog_title"
            android:inputType="text"
            android:key="action_4"
            android:title="@string/action_4_title"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:dialogMessage="@string/action_5_dialog_message"
            android:dialogTitle="@string/action_5_dialog_title"
            android:inputType="text"
            android:key="action_5"
            android:title="@string/action_5_title"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:dialogMessage="@string/action_6_dialog_message"
            android:dialogTitle="@string/action_6_dialog_title"
            android:inputType="text"
            android:key="action_6"
            android:title="@string/action_6_title"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:dialogMessage="@string/action_7_dialog_message"
            android:dialogTitle="@string/action_7_dialog_title"
            android:inputType="text"
            android:key="action_7"
            android:title="@string/action_7_title"
            app:iconSpaceReserved="false" />

        <EditTextPreference
            android:dialogMessage="@string/action_8_dialog_message"
            android:dialogTitle="@string/action_8_dialog_title"
            android:inputType="text"
            android:key="action_8"
            android:title="@string/action_8_title"
            app:iconSpaceReserved="false" />


    </PreferenceCategory>

</PreferenceScreen>